<resources>
    <string name="app_name">Quarantine Alert</string>
    <string name="splash_title">Quarantine Alert</string>
    <string name="splash_message">Awareness, Home Isolation and Health Tips</string>
    <string name="retry">Retry</string>
    <string name="home_bottom_dialog_title">Coronavirus COVID-19 Global Cases</string>
    <string name="home_bottom_country_title">COVID-19 Cases in %1$s</string>
    <string name="death_total">Total\ncasualties</string>
    <string name="confirmed_total">Total\nconfirmed</string>
    <string name="recovered_total">Total\nrecovered</string>
    <string name="update_at">Update at %1$s</string>
    <string name="symptoms">Symptoms</string>
    <string name="fever">Fever</string>
    <string name="cough">Dry cough</string>
    <string name="difficulty_breathing">Difficulty\nbreathing</string>
    <string name="runny_nose">Nasal\nsecretions</string>
    <string name="sore_throat">Throat\npain</string>
    <string name="scare_virus">Learn about the symptoms of Covid 19</string>
    <string name="consult_now">Consult now</string>
    <string name="consult_message">Take your precautions and don\'t ignore the symptoms. See what the symptoms are today.</string>
    <string name="search_hint">Search…</string>
    <string name="your_location">Your location</string>
    <string name="emergency_guide">Emergency Guide</string>
    <string name="videos_text">Videos</string>
    <string name="know_more">Know more</string>
    <string name="scare_emergency">Avoid the spread of Covid 19</string>
    <string name="scare_emergency_message">If you suspect that you are infected or someone close to you, see what are the appropriate measures to take.</string>
    <string name="email_message">Send email to c19care@gmail.com</string>
    <string name="network_error_message">Please check your internet connection and try again.</string>
    <string name="default_error_message">An error occurred, please try again.</string>
    <string name="menu_global_cases">Global cases</string>
    <string name="menu_symptoms">Symptoms</string>
    <string name="menu_stages">Stages of COVID-19</string>
    <string name="menu_emergency_guide">Emergency guide</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_contact">Contact us</string>
    <string name="symptoms_title_1">What is COVID-19?</string>
    <string name="symptoms_desc_1">COVID-19 is the most recently discovered infectious disease caused by the coronavirus. Both the new virus and the disease were unknown before the outbreak in Wuhan, China, in December 2019.</string>
    <string name="symptoms_title_2">What are the symptoms of COVID-19?</string>
    <string name="symptoms_desc_2">The most common symptoms of COVID-19 are fever, tiredness, and dry cough. Some patients may experience pain, nasal congestion, runny nose, sore throat, or diarrhea. These symptoms are usually mild and appear gradually. Some people become infected but do not develop any symptoms and are not ill. Most people (about 80%) recover from the disease without needing any special treatment. About 1 in 6 people who get COVID-19 develop a serious illness and have trouble breathing. Older people and those with underlying medical conditions, such as high blood pressure, heart problems, or diabetes, are more likely to develop serious illness. About 2% of people who have contracted the disease have died. People with fever, cough, and shortness of breath should seek medical attention.</string>
    <string name="symptoms_title_3">Do you suspect that you or someone close to you may be infected?</string>
    <string name="thanks_title">Thanks and their respective credits to all who made this application possible!</string>
    <string name="thanks_data">Thanks for the data to:</string>
    <string name="thanks_data_author"><u>CSSE</u></string>
    <string name="thanks_info">Thanks for the information to:</string>
    <string name="thanks_info_author"><u>OMS</u></string>
    <string name="thanks_api">Thanks for the API to:</string>
    <string name="thanks_api_author"><u>Nuttaphat Arunoprayoch</u></string>
    <string name="thanks_icons">Thanks for the icons to:</string>
    <string name="thanks_icons_author_1"><u>Flaticon</u></string>
    <string name="thank_and">y</string>
    <string name="thanks_icons_author_2"><u>Freepik</u></string>
    <string name="Stage1">Stage 1: Understand with the example of Ankur</string>
    <string name="stage1_descp">Amid fears of Corona, Ankur came to his home from London to India. He did not have fever at the airport. He was allowed to go home. But he was given an affidavit at the airport that he would be imprisoned in his house for 14 days. And when fever comes, he will contact this number. After going home, he complied with the conditions of the affidavit. He was imprisoned in the house. He even kept distance from the members of the household. Ankurki Mummy said - nothing happened to you. Do not remain isolated. After so many days, you will get the food of the house, in the kitchen, I serve hot hot food. This time Ankur got angry. He shouted to Mummy. Tears spilled in Mummy eye. Vebura agreed.
        Sprouts continue to be the most isolated (isolate).
        On the 6-7th day, sprouts started having symptoms like fever, cold cough. He called the helpline. Corona test was performed. He turned out positive. His family members were also tested. All of them turned out to be negative. One km area was questioned the most. Everyone was tested.
        Everyone said that no one saw Ankur coming out of the house. Since he had isolated himself well, he did not spread the corona to anyone else. Ankurki was younger. The symptoms of corona were very minor. Just fever, cold, cough, body pain etc. occurred. After 7 days of treatment, he recovered completely and came home after being discharged from the hospital. The mother, who had felt bad yesterday, is thankfully today that there is no corona all over the house.
        \n  \nConclusion: This is the first stage where the corona is only in a man from abroad. He did not give it to anyone else.
    </string>
    <string name="Stage2">Stage 2- Understand the example of Aniket who became Corona positive by mistake of another</string>
    <string name="stage2_descp">Aniket, who lives in Mumbai, had fever and cough. The health officer took all the information from Aniket about his past days. That information showed that he did not go abroad. But he has come in contact with a person who has recently come abroad. He went to a jewelery shop to buy jewelry the day before yesterday. His boss Sethji had recently returned from Italy.
        Sethji came from abroad. He did not have fever at the airport. That is why he was allowed to go home. But his affidavit was made to be filled, that he would remain completely alone for the next 14 days and would not leave the house. Will also stay away from family members.
        But, in the pursuit of earning, he flew the flag of that affidavit filled at the airport. At home, he met with the most love, touched others and let himself be touched. Eat your favorite vegetable in the evening and go to your jewelry shop the next day.
        On the 6th day, Sethji got fever. His family also got fever. The old mother was also among the family members. All came out positive in the investigation. The man who came from abroad got himself positive, then he also made the housemates positive. In Sethjidukan, 450 people came in contact, like servants, customers etc.
        One of them was Aniket Bhitha.
        Now: Isolating all 450 people. It is a second stage even if there is a positive in them.
        The fear is that not every one of these 450 people will know where they have gone, how many people they must have met !!!!
        \n \nConclusion: Overall stage 2 means that the man who has come corona positive did not go abroad. But he has come in contact with a person who has recently come abroad.</string>
    <string name="Stage3">Stage 3: Understand the example of Ankita, who did not know how she got infected?</string>
    <string name="stage3_descp">Ankitako was hospitalized due to cold, cough, fever, her corona positive came there, but she never went abroad. Nor did she come in contact with anyone who has come abroad recently.
        That is, now we do not know the source from where the Ankita Corona finally came from?
        In Stage 1 the man himself came from abroad.
        Stage 2 knew that there were sources. We tested every person they came in contact with and isolated them for 14 days.
        In Stage 3 you will not find the source of coronavirus inferior.
        \n \nConclusion: If we do not know the source, we cannot capture it. We cannot isolate the person. Where it will not know the source and will inadvertently infect many people.</string>
    <string name="Stage4">Stage 4: Example of infinity Who is explaining it by sending a video from Italy?</string>
    <string name="stage4_descp">Suppose Anant, who lives in Delhi, is trapped in Italy. He has sent a video from there to warn the people of India that if you do not stop the infection of corona in seconds or third stage then conditions like Italy will happen.
        In Italy, the fourth stage of the virus has reached the mass level above the community level. Now neither SARES can detect nor does any way of stopping the epidemic be understood. That is why in Italy it is said that let the old men die, save the children and the young men.
        You most importantly, why should we fear stage 3 and understand how it arises?
        Sethji came in contact with 450 people. As soon as the news of his being positive spread, all his customers, servants, neighbors of the house, neighbors of the shop, milkmen, utensils, chai wala… all ran to the hospital. The total was 440 people.
        10 people have still not been found. Police and Health Department team are looking for them.
        If any of those 10 entered any temple etc. then this virus will spread a lot.
        \n \nConclusion: This is Stage 3 where you dont know the source.
        Public curfew is an effective way to prevent stage 3. Photo: Artwork of Sand Artist Sudarshan Patnaik.
        Stoppage of stage 3
        14-day lockdown means complete lockout. Put the public curfew. Lock the city completely for 14 days. Dont let anyone get out.
        What will happen with this lockout?
        Every man is locked in the house. In such a situation, a man who has not come in contact with an infected person is safe. The person who is an unknown source is also locked in his house. When he falls ill, he will arrive at the hospital. It will be known that this is the unknown source.
        \n \nConclusion: This unknown source may have infected 4 more people from his home, but the rest of the city survived. If there was no lockdown then he would not come to Sourcepakad and he would have spread the corona to thousands of such people. Then these thousand unknown people would spread it among millions. So the entire city survived the lockdown and the unknown source was caught.
        On March 22, a picture of Janata curfew in which policemen are giving people flowers to convince them to stay in the house.
        What to do if stage 2 does not change to stage 3?</string>
    <string name="forms">Forms</string>
    <string name="menu_precautions">Precautions</string>
    <string name="menu_guidelines">"Home quarantine guidelines "</string>
    <string name="aminfected">I am Infected</string>
    <string name="someinfected">Someone I know is Infected</string>
    <string name="homeiso">Home Isolation</string>
    <string name="donations">Donations</string>
    <string name="telegram">Telegram</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="helpline">Helpline number</string>
    <string name="report">Report cases</string>
</resources>