<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.credits.CreditsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/menu_credits"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_thank" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/quicksand_semibold"
                android:gravity="center"
                android:text="@string/thanks_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_data"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/authorDataText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_data_author"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_info"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/authorInfoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_info_author"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_api"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/authorApiText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_api_author"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_icons"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/flaticonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_icons_author_1"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thank_and"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/freepikText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:gravity="center"
                    android:text="@string/thanks_icons_author_2"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">
                <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/nikk"
                    />
                <TextView
                    android:id="@+id/nikk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:text="Gaurav"
                    android:textColor="#fff" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/sun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:gravity="center"
                    android:text="Sunmughan"
                    android:textColor="#fff" />
                <ImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profi"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/sun"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.quarantinealert.util.CircleImagview
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image2"
                    app:cardCornerRadius="96dp"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/krys"
                    />
                <TextView
                    android:id="@+id/bal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="17dp"
                    android:paddingEnd="17dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_background"
                    android:gravity="center_horizontal"
                    android:text="Krishna"
                    android:textColor="#fff" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>